<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NuevoActivity">

    <EditText
        android:id="@+id/txtPais"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_nombre"
        android:inputType="textPersonName"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/txtregion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_region"
        android:inputType="textPersonName"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/txtcapitan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_Capitan"
        android:inputType="textPersonName"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/txtranking"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_Ranking"
        android:inputType="textPersonName"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/txtmundiales"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_Mundiales_Ganados"
        android:inputType="textPersonName"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btnguardar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_guardar"
        android:textSize="24sp" />
</LinearLayout>