<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".VerActivity">


    <TextView
        android:id="@+id/viewPais"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_nombre" />

    <EditText
        android:id="@+id/txtPais"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"


        android:inputType="textPersonName"
        android:labelFor="@+id/viewPais"
        android:text="@string/hint_nombre"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/viewRegion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_region" />

    <EditText
        android:id="@+id/txtregion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"


        android:inputType="textPersonName"
        android:labelFor="@+id/viewRegion"
        android:text="@string/hint_region"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/viewCapitan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_Capitan" />


    <EditText
        android:id="@+id/txtcapitan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"


        android:inputType="textPersonName"
        android:labelFor="@+id/viewCapitan"
        android:text="@string/hint_Capitan"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/viewRanking"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_Ranking" />

    <EditText
        android:id="@+id/txtranking"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"


        android:inputType="textPersonName"
        android:labelFor="@+id/viewRanking"
        android:text="@string/hint_Ranking"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/viewMundiales"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_Mundiales_Ganados" />

    <EditText
        android:id="@+id/txtmundiales"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"


        android:inputType="textPersonName"
        android:labelFor="@+id/viewMundiales"
        android:text="@string/hint_Mundiales_Ganados"
        android:textSize="24sp" />



    <Button
        android:id="@+id/btnguardar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_guardar"
        android:textSize="24sp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabeditar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:clickable="true"
        android:src="@drawable/ic_edit" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabeliminar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:clickable="true"
        android:src="@drawable/ic_delete" />

</LinearLayout>
